# oct-to-tiff

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.txt  README.md  convert_3d_cornea_scan.py  convert_cornea_cross_line_scan.py  convert_pachymetry_wide_scan.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: publish-to-docker-hub.yml  publish-to-pypi.yml  publish-to-testpypi.yml  pytest.yml  ruff.yml  semantic-release.yml
oct_to_tiff/: cli.py
src/oct_to_tiff/: cli.py
tests/: test_cli.py
