[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "oct-to-tiff"
version = "0.5.0"
dependencies = [
    "defusedxml",
    "numpy",
    "tifffile",
]
requires-python = ">=3.10"
authors = [{name = "Cameron Lloyd", email = "lloyd@med.unideb.hu"}]
maintainers = [{name = "Cameron Lloyd", email = "lloyd@med.unideb.hu"}]
description = "A command line tool for converting optical coherence tomography angiography (OCTA) data."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["angiography", "cli", "oct", "octa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-defusedxml"
]

[project.urls]
Homepage = "https://github.com/camlloyd/oct-to-tiff"
"Bug Tracker" = "https://github.com/camlloyd/oct-to-tiff/issues"
Changelog = "https://github.com/camlloyd/oct-to-tiff/blob/main/CHANGELOG.md"

[project.scripts]
oct-to-tiff = "oct_to_tiff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = [
    "I", # isort
    "S", # flake8-bandit
]