[metadata]
name = oct_to_tiff
version = 0.3.0
author = Cameron Lloyd
author_email = lloyd@med.unideb.hu
description = A command line tool for converting optical coherence tomography angiography (OCTA) data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/camlloyd/oct-to-tiff
project_urls =
    Bug Tracker = https://github.com/camlloyd/oct-to-tiff/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10    

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires=
    numpy
    tifffile

[options.entry_points]
console_scripts =
    oct-to-tiff = oct_to_tiff.cli:main

[options.packages.find]
where = src